Add composer + moved sites/ to conf/nginx-conf.d +
moved document_root 1 directory deeper.

--- a/conf/php.ini
+++ b/conf/php.ini
@@ -8,8 +8,10 @@ xdebug.max_nesting_level = 1000
 xdebug.profiler_enable_trigger = 1
 xdebug.profiler_output_dir = "/var/log"
 
-; Show PHP errors
+; Show PHP errors without strict
 display_errors = on
+error_reporting = E_ALL & ~E_STRICT
 
-; Use PHP short tags
-short_open_tag = on
+; Show PHP errors without strict or deprecated
+;error_reporting = E_ALL & ~E_STRICT & ~E_DEPRECATED
+
